[Finish]レスポンシブ

--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@ a {
   text-decoration: none;
 }
 
-header, nav, h2, .main-visual, footer {
-  font-family: Chalkduster, "Bradley Hand",Courier, "Segoe Print",sans-serif;
+header,
+nav,
+h2,
+.main-visual,
+footer {
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
 }
 
 header {
@@ -67,8 +71,8 @@ header.heading {
   width: 40%;
   height: 300px;
   background-color: rgba(0, 0, 0, 0.5);
-  text-align: center;/*文字を中央揃え*/
-  padding-top: 105px;/*上側の内側余白で垂直方向の位置を調整*/
+  text-align: center; /*文字を中央揃え*/
+  padding-top: 105px; /*上側の内側余白で垂直方向の位置を調整*/
 }
 
 .main-visual-text {
@@ -228,4 +232,71 @@ footer {
 
 .footer-text {
   color: #fff;
+}
+
+@media screen and (max-width:425px) {
+
+  header {
+    width: 100%;
+  }
+
+  .nav-list {
+    width: 100%;
+  }
+
+  .nav-list-item {
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+
+  .social {
+    display: none;
+  }
+
+  .main-visual-content {
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+
+  .blog-box {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .blog-image {
+    width: 49%;
+  }
+
+  .blog-text {
+    width: 49%;
+    padding-top: 5px;
+  }
+
+  .sidebar {
+    width: 100%;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+
+  .pagination {
+    margin-bottom: 50px;
+  }
 }
